# DhQuantSystem

./: .clangd  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  skills-lock.json  test_data.csv
config/: base.yaml  dev.yaml
cpp/: CMakeLists.txt  conanfile.txt
cpp/include/dhquant/: domain.h  engine.h
cpp/include/dhquant/core/: backtest_matcher.h  backtest_replay_reader.h  clock.h  config.h  dispatcher.h  event.h  event_loop.h  handler.h  journal.h  python_bridge_handler.h  replay.h  runtime_context.h  shutdown_hook.h
cpp/include/dhquant/oms/: order_manager.h  order_state_machine.h
cpp/include/dhquant/portfolio/: ledger.h
cpp/include/dhquant/risk/: risk_gate.h
cpp/include/utils/: Affinity.hpp  ErrorCode.h  LockFree.hpp  Log.hpp  Result.hpp  ThreadPool.hpp
cpp/src/: binding.cpp  engine.cpp
cpp/src/core/: backtest_matcher.cpp  backtest_replay_reader.cpp  clock.cpp  dispatcher.cpp  event_loop.cpp  handler.cpp  journal.cpp  python_bridge_handler.cpp  replay.cpp  shutdown_hook.cpp
cpp/src/domain/: domain.cpp
cpp/src/oms/: order_manager.cpp  order_state_machine.cpp
cpp/src/portfolio/: ledger.cpp
cpp/src/risk/: risk_gate.cpp
cpp/src/utils/: Log.cpp  logConsoleSink.cpp  logFileSink.cpp
cpp/test/unittest/: test_core.cpp  test_log.cpp  test_phase5.cpp  test_result.cpp
proto/: control.proto  market.proto  order.proto  risk.proto
python/dhquant/: __init__.py  config.py  domain.py
python/dhquant/backtest/: __init__.py  preprocess.py
python/dhquant/core/: __init__.py
python/dhquant/gui/: __init__.py  app.py  backend.py
python/dhquant/gui/qml/: BacktestPage.qml  Main.qml  MarketPage.qml  NewsPage.qml
python/dhquant/gui/qml/components/: CustomTitleBar.qml  IconButton.qml  Sidebar.qml  SidebarButton.qml
python/dhquant/gui/qml_modern/: Main.qml
python/dhquant/gui/qml_modern/components/: AppSidebar.qml  GlassPanel.qml  NavRailButton.qml  StockListPopup.qml  StrategyPopup.qml  StrategyResultCard.qml  TopBar.qml
python/dhquant/gui/qml_modern/pages/: BacktestPage.qml  MarketPage.qml  NewsPage.qml
python/dhquant/oms/: order_service.py
python/dhquant/pipeline/: __init__.py  base.py  executor.py  pipeline.py
python/dhquant/pipeline/nodes/: dummy_order_node.py
python/dhquant/runtime/: __init__.py  context.py  converters.py  runner.py  strategy.py
python/dhquant/strategy/: __init__.py
python/dhquant/strategy/samples/: __init__.py  mock_strategy.py
python/dhquant/tests/: test_phase5_oms.py  test_smoke.py
